Junior Security Analyst (Fixed Term – 6 months) - FlexTrade     . Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. CrowdStrike Careers - Security Analyst. Kenna Security - Software Engineer. Logitech Careers - IT Security Operations Analyst. Security Analyst - SOC | Trustwave Careers. Application Security Engineer | Shulman Fleming &amp; Partners. Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN. Sr IT Security Architect - Florida Blue Careers. Anitian  Security Engineer | SmartRecruiters. Cyber Security Data Analytics Engineer - MITRE Careers. ServiceNow Careers - Senior Security Risk Engineer. Freelancer.com - Jobs: Security Engineer - Apply online. Zycus - Jobs: Application Security Architect (Java) - Apply online. Zycus - Jobs: Application Security Architect (Java) - Apply online. Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters. Harmonic Inc. Careers - Sr. Network & Security Engineer. Arthur Grand Technologies Inc Cyber Security System Analyst | SmartRecruiters. Arthur Grand Technologies Inc Security Systems Analyst ( TS clearance & security + must) | SmartRecruiters. Security Analyst I - The Federal Reserve System Careers. Flywire Cyber Security Analyst | SmartRecruiters. PerimeterX - Cyber Security Analyst. MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters. Lloyd Staffing Security Engineer (Firewall) | SmartRecruiters. Associate Network Security Engineer - MacStadium - Career Page. Job Application for Information Security Engineer at Globality, Inc.. Tyro - Security Team Lead - Engineering. QuintoAndar - Jobs: Information Security Analyst - Apply online. Job Application for DevOps Security Engineer  at Curology. Job Application for Sr. DevOps Security Engineer  at Curology. Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote. Tenable Careers - Security Sales Enginee

--- a/security.html
+++ b/security.html
@@ -45,7 +45,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -69,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -188,7 +188,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692214887-expert-cloud-security-architect-for-global-retail-sportswear-client'>Aroghia Group Expert Cloud Security Architect for Global Retail Sportswear Client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -308,7 +308,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999692146313-network-security-engineer'>GBM Network Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999692146313-network-security-engineer'>GBM Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -384,7 +384,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Austin, Texas Texas, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4330893002'>Job Application for Software Security Architect at WeWork Global Technology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4330893002'>Job Application for Software Security Architect at WeWork Global Technology</a></h5> 
 <p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -424,7 +424,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o1VAafwq'>Tenable Careers - Product Security Architect - Security Development Lifecycle</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o1VAafwq'>Tenable Careers - Product Security Architect - Security Development Lifecycle</a></h5> 
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -446,7 +446,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=olKtafws&__jvst=Employee&__jvsd=s2zhigwV&__jvsc=Twitter&bid=nExwPKwL'>Splunk Careers - Cloud Security and Compliance Engineer - Public Sector</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=olKtafws&__jvst=Employee&__jvsd=s2zhigwV&__jvsc=Twitter&bid=nExwPKwL'>Splunk Careers - Cloud Security and Compliance Engineer - Public Sector</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -454,7 +454,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/27a320c4-40b4-477d-aa65-360fed1ce195'>Aptiv-Mobility - Cloud Security Engineer - Cyber-Security</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/27a320c4-40b4-477d-aa65-360fed1ce195'>Aptiv-Mobility - Cloud Security Engineer - Cyber-Security</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
